[gd_scene load_steps=66 format=3 uid="uid://fycg8gpkdyq8"]

[ext_resource type="Script" path="res://Scenes/Player_Scenes/main_character.gd" id="1_irwrw"]
[ext_resource type="Shape2D" uid="uid://bkdk1k5gds53e" path="res://PlayerCharVariables/CapsuleCollision.tres" id="2_vrk42"]
[ext_resource type="Script" path="res://Scenes/Player_Scenes/camera_2d.gd" id="3_6nbut"]
[ext_resource type="Texture2D" uid="uid://jagltsrqlryg" path="res://Images/PlayerImages/Postmonkey.png" id="3_hd00e"]
[ext_resource type="AudioStream" uid="uid://4q54cjrih2tm" path="res://Sounds/PractiseProjectJungle.wav" id="4_teoho"]
[ext_resource type="Script" path="res://Scenes/Player_Scenes/audio_stream_player_2d.gd" id="5_nasbg"]
[ext_resource type="AudioStream" uid="uid://k0hjpvh3eq0r" path="res://Sounds/GraplingHookThrowSFX.wav" id="6_5qe2q"]
[ext_resource type="PackedScene" uid="uid://bjmivrjneu3j1" path="res://Scenes/UI_Scenes/UI.tscn" id="7_m0c5y"]
[ext_resource type="Texture2D" uid="uid://dsm0p1h0hxk0w" path="res://Images/PlayerImages/PostmonkeyBall.png" id="7_tqedr"]
[ext_resource type="Texture2D" uid="uid://co1d7vt2m7xcg" path="res://Images/PlayerImages/BallDash.png" id="8_f65xl"]
[ext_resource type="Texture2D" uid="uid://dj0bh0n3vd1iq" path="res://Images/PlayerImages/BrightBall.png" id="9_50mtp"]
[ext_resource type="Texture2D" uid="uid://d32pwh6vglvnb" path="res://Images/PlayerImages/PostmonkeyRunning.png" id="9_fjfsx"]

[sub_resource type="AtlasTexture" id="AtlasTexture_guiet"]
atlas = ExtResource("7_tqedr")
region = Rect2(0, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_2b7ti"]
atlas = ExtResource("8_f65xl")
region = Rect2(0, 4, 96, 88)

[sub_resource type="AtlasTexture" id="AtlasTexture_a7g4b"]
atlas = ExtResource("8_f65xl")
region = Rect2(96, 4, 96, 88)

[sub_resource type="AtlasTexture" id="AtlasTexture_4kd8j"]
atlas = ExtResource("8_f65xl")
region = Rect2(192, 4, 96, 88)

[sub_resource type="AtlasTexture" id="AtlasTexture_d62w0"]
atlas = ExtResource("8_f65xl")
region = Rect2(288, 4, 96, 88)

[sub_resource type="AtlasTexture" id="AtlasTexture_h1gvo"]
atlas = ExtResource("7_tqedr")
region = Rect2(0, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_vfgkh"]
atlas = ExtResource("9_50mtp")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_wo2yd"]
atlas = ExtResource("3_hd00e")
region = Rect2(384, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_oisy7"]
atlas = ExtResource("3_hd00e")
region = Rect2(480, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_um0q2"]
atlas = ExtResource("3_hd00e")
region = Rect2(576, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_h5r1o"]
atlas = ExtResource("3_hd00e")
region = Rect2(672, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_y3asn"]
atlas = ExtResource("3_hd00e")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_kr38b"]
atlas = ExtResource("3_hd00e")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_hgtbg"]
atlas = ExtResource("3_hd00e")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ib3l1"]
atlas = ExtResource("3_hd00e")
region = Rect2(288, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_5vidr"]
atlas = ExtResource("9_fjfsx")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_j1wtw"]
atlas = ExtResource("9_fjfsx")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_8uqkx"]
atlas = ExtResource("9_fjfsx")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_jtn71"]
atlas = ExtResource("9_fjfsx")
region = Rect2(288, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_pq2vn"]
atlas = ExtResource("9_fjfsx")
region = Rect2(384, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_iceyk"]
atlas = ExtResource("9_fjfsx")
region = Rect2(480, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_si602"]
atlas = ExtResource("9_fjfsx")
region = Rect2(576, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_072m3"]
atlas = ExtResource("9_fjfsx")
region = Rect2(672, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_k3u5c"]
atlas = ExtResource("9_fjfsx")
region = Rect2(768, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_bi487"]
atlas = ExtResource("9_fjfsx")
region = Rect2(864, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_dm42c"]
atlas = ExtResource("9_fjfsx")
region = Rect2(960, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_x8fu0"]
atlas = ExtResource("3_hd00e")
region = Rect2(768, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_5lyqv"]
atlas = ExtResource("3_hd00e")
region = Rect2(864, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_mayy6"]
atlas = ExtResource("3_hd00e")
region = Rect2(960, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_lx7os"]
atlas = ExtResource("3_hd00e")
region = Rect2(1056, 0, 96, 96)

[sub_resource type="SpriteFrames" id="SpriteFrames_5008j"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_guiet")
}],
"loop": true,
"name": &"Ball Demo",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2b7ti")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a7g4b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4kd8j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d62w0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h1gvo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vfgkh")
}],
"loop": true,
"name": &"Dash",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wo2yd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oisy7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_um0q2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h5r1o")
}],
"loop": true,
"name": &"Idle Left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y3asn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kr38b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hgtbg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ib3l1")
}],
"loop": true,
"name": &"Idle Right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5vidr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j1wtw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8uqkx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jtn71")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pq2vn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iceyk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_si602")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_072m3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k3u5c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bi487")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dm42c")
}],
"loop": true,
"name": &"Running",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x8fu0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5lyqv")
}],
"loop": true,
"name": &"Turn LR",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mayy6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lx7os")
}],
"loop": true,
"name": &"Turn RL",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_vtrcv"]
resource_name = "Ball"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Ball Demo"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0]
}

[sub_resource type="Animation" id="Animation_l0x3m"]
resource_name = "Dash"
length = 0.35
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Dash"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.333333),
"transitions": PackedFloat32Array(6.27667, 1, 6.27667),
"update": 0,
"values": [4, 0, 4]
}

[sub_resource type="Animation" id="Animation_7rax6"]
resource_name = "Idle"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Idle Right"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 3]
}

[sub_resource type="Animation" id="Animation_amenr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Turn LR"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_ixwdk"]
resource_name = "Running"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Running"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 10]
}

[sub_resource type="Animation" id="Animation_me7ru"]
resource_name = "Turn"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Turn RL"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.133333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 1]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.166667),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"flipSprite"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nbpvm"]
_data = {
"Ball": SubResource("Animation_vtrcv"),
"Dash": SubResource("Animation_l0x3m"),
"Idle": SubResource("Animation_7rax6"),
"RESET": SubResource("Animation_amenr"),
"Running": SubResource("Animation_ixwdk"),
"Turn": SubResource("Animation_me7ru")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_uy5v3"]
animation = &"Ball"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_giw0o"]
animation = &"Dash"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_5d4ch"]
animation = &"Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_6tk84"]
animation = &"Running"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_sutqh"]
animation = &"Turn"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_v8c2c"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_cmd77"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_x0lmp"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_usajj"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_q4slg"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_tt2dc"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_7aptu"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_pfk1q"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_h24vb"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_uqevx"]
states/Ball/node = SubResource("AnimationNodeAnimation_uy5v3")
states/Ball/position = Vector2(530, 180)
states/Dash/node = SubResource("AnimationNodeAnimation_giw0o")
states/Dash/position = Vector2(576, 78)
states/Idle/node = SubResource("AnimationNodeAnimation_5d4ch")
states/Idle/position = Vector2(318, 40)
states/Running/node = SubResource("AnimationNodeAnimation_6tk84")
states/Running/position = Vector2(346, 203)
states/Start/position = Vector2(196, 164)
states/Turn/node = SubResource("AnimationNodeAnimation_sutqh")
states/Turn/position = Vector2(460, 40)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_v8c2c"), "Idle", "Ball", SubResource("AnimationNodeStateMachineTransition_cmd77"), "Idle", "Turn", SubResource("AnimationNodeStateMachineTransition_x0lmp"), "Turn", "Idle", SubResource("AnimationNodeStateMachineTransition_usajj"), "Running", "Ball", SubResource("AnimationNodeStateMachineTransition_q4slg"), "Ball", "Running", SubResource("AnimationNodeStateMachineTransition_tt2dc"), "Idle", "Running", SubResource("AnimationNodeStateMachineTransition_7aptu"), "Running", "Idle", SubResource("AnimationNodeStateMachineTransition_pfk1q"), "Dash", "Ball", SubResource("AnimationNodeStateMachineTransition_h24vb")]

[node name="Player" type="CharacterBody2D" groups=["Player"]]
position = Vector2(232, -1274)
scale = Vector2(2, 2)
floor_max_angle = 1.309
script = ExtResource("1_irwrw")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, -0.5)
shape = ExtResource("2_vrk42")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(82.5, -23)
scale = Vector2(0.5, 0.5)
zoom = Vector2(0.5, 0.5)
position_smoothing_enabled = true
position_smoothing_speed = 3.0
script = ExtResource("3_6nbut")

[node name="SoundEffects" type="AudioStreamPlayer2D" parent="Camera2D" groups=["AudioPlayers"]]
scale = Vector2(0.666666, 0.666666)
stream = ExtResource("6_5qe2q")

[node name="Music" type="AudioStreamPlayer2D" parent="Camera2D"]
scale = Vector2(0.666666, 0.666666)
stream = ExtResource("4_teoho")
max_distance = 5000.0
attenuation = 1.63537e-05
script = ExtResource("5_nasbg")

[node name="UI" parent="." instance=ExtResource("7_m0c5y")]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_5008j")
animation = &"Turn LR"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_nbpvm")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_uqevx")
anim_player = NodePath("../AnimationPlayer")

[node name="RayCast2DLeft" type="RayCast2D" parent="."]
position = Vector2(-24.5, 5)
target_position = Vector2(5, 60)

[node name="RayCast2DRight" type="RayCast2D" parent="."]
position = Vector2(22.5, 5)
target_position = Vector2(-5, 60)

[node name="RayCast2DSideLeft" type="RayCast2D" parent="."]
position = Vector2(0, -5)
target_position = Vector2(-30, 0)

[node name="RayCast2DSideRight" type="RayCast2D" parent="."]
position = Vector2(0, -5)
target_position = Vector2(30, 0)
